@@ -14,6 +14,10 @@
 
 	* testsuite/: More complete testsuite, with coverage checking.
 
+	* testsuite/check_xml_converters.erl: Renamed from
+	check_xml_serializer.erl to add other tests thant juste
+	serialization.
+
 2006-06-28  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	The whole project uses the Autotools now.
